Mon Dec 11 12:13:14 CET 2006 Daniel Veillard <daniel@veillard.com>

	* configure python/generator.py python/libxsl.py
	  python/libxslt-python-api.xml python/libxslt.c
	  python/tests/2stage.py python/tests/loader.py: applied patch from
	  Nic James Ferrier to make stylesheets comparable and to add
	  transformContext handling

Sat Dec  9 15:22:34 PST 2006 William Brack <wbrack@mmm.com.hk>

	* libexslt/functions.c: changed handling of function params
	  to fix bug #381319
	* libxslt/transform.[ch]: exposed xsltLocalVariablePush and
	  xsltLocalVariablePop as global entries so that they could
	  be used from within libexslt/functions.c
	* tests/exslt/functions/function.9.[xsl,xml,out] added to
	  regression tests

Tue Dec  5 10:45:04 CET 2006 Daniel Veillard <daniel@veillard.com>

	* libxslt/extensions.c: applied patch from Marcus Meissner removing
	  a strict aliasing problem should fix #317921

Fri Dec  1 23:02:27 HKT 2006 William Brack <wbrack@mmm.com.hk>

	* libxslt/transform.c: fixed problem with housekeeping of
	  localRVTBase, bug #378766

Wed Nov 29 16:06:43 CET 2006 Daniel Veillard <daniel@veillard.com>

	* NEWS configure.in doc//*: preparing release of libxslt-1.1.19

Sat Nov 25 11:48:28 HKT 2006 William Brack <wbrack@mmm.com.hk>

	* libxslt/variables.c: fixed problem with cached RVT's,
	  bug #378766

Thu Nov 23 17:49:31 CET 2006 Daniel Veillard <daniel@veillard.com>

	* libxslt/transform.c: applied patch from Mike Hommey about saving
	  the current in-scope namespace list when calling a template, fixes
	  bug #377579

Thu Nov 23 15:36:28 CET 2006 Daniel Veillard <daniel@veillard.com>

	* configure.in: fix a python detection problem pointed out by 
	  Joseph Sacco, fixes bug #376391

Fri Nov 17 09:53:08 HKT 2006 William Brack <wbrack@mmm.com.hk>

	* libxslt/transform.c: fixed problem with entity handling
	  within xsltCopyAttrListNoOverwrite (#352907)
	* tests/general/bug-164.xsl, tests/general/bug-164.out,